hphp/hack/test/typecheck/expression_trees/default_parameter.php.exp
ERROR: File "default_parameter.php", line 5, characters 50-62:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "default_parameter.php", line 9, characters 40-52:
Expected constant expression for initializer (Parsing[1002])
